Add [workspaces, title, media, resources, volume] to the status bar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -63,15 +63,13 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # [Autostart]
 exec-once = $terminal
-exec-once = hyprpaper &
-exec-once = ciadpi -i 127.0.0.1 -p 1080 -F --split 1 --disorder -1 --auto torst --timeout 3 --tlsrec 3+s & 
-exec-once = gnome-keyring-daemon &
+exec-once = hyprpaper
+exec-once = ciadpi -i 127.0.0.1 -p 1080 -F --split 1 --disorder -1 --auto torst --timeout 3 --tlsrec 3+s
+exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ignis init &
 
 # [Global: Start essential programs, close window]
 bind = $mainMod, Q, exec, $terminal
-bind = ALT, Q, exec, hyprpicker -a
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -139,8 +137,8 @@ submap = tools
 # [Tools: Screenshot]
 bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod, P, exec, grim -g "$(slurp -d)" - | tee ~/Media/Screenshots/$(date +'%Y-%m-%d-%H:%M:%S.png') | wl-copy
-# [Tools: Pick color]
-bind = $mainMod, C, exec, hyprpicker
+# [Tools: Colorpicker]
+bind = $mainMod, C, exec, hyprpicker -a
 # [Tools: Reset]
 bind = $mainMod, T, submap, reset
 submap = reset
