--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,12 +59,12 @@ $menu = wofi --show drun
 
 # [Rules]
 windowrule = float, ^(kitty)$ # Make terminal a floating window by default
+windowrule = center, Rain
 windowrulev2 = suppressevent maximize, class:.*
 
 # [Autostart]
 exec-once = $terminal
 exec-once = hyprpaper
-exec-once = ciadpi -i 127.0.0.1 -p 1080 -F --split 1 --disorder -1 --auto torst --timeout 3 --tlsrec 3+s
 exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
@@ -86,6 +86,10 @@ bind = $mainMod SHIFT, left, movewindow, l
 bind = $mainMod SHIFT, down, movewindow, d
 bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod ALT, left, moveactive, -50 0
+bind = $mainMod ALT, down, moveactive, 0 50
+bind = $mainMod ALT, up, moveactive, 0 -50
+bind = $mainMod ALT, right, moveactive, 50 0
 # [Global: Reload Ignis]
 bind = $mainMod, I, exec, ignis reload
 # [Global: Move windows with (alt + left mouse)]
