--- a/.xonshrc
+++ b/.xonshrc
@@ -37,7 +37,7 @@ def alias(name: str):
 aliases.update({
     "py": "python",
     "cls": "clear",
-    "dpi": "ciadpi -i 127.0.0.1 -p 1080 -F --split 1 --fake 1 --disorder -1 --auto torst --timeout 3 --tlsrec 3+s --debug 1",
+    "dpi": "ciadpi -i 127.0.0.1 -p 1080 -s1 -q1 -Y -Ar -s5 -o1+s -At -f-1 -r1+s -As -s1 -o1 +s -s-1 -An --debug 1",
     "pixelorama": "~/Tools/Pixelorama/Pixelorama.x86_64",
     "ror": "r2modman --no-sandbox",
     "config": "nvim ~/.xonshrc",
