configure hyprlock, edit xonshrc a bit

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ monitor=HDMI-A-1,3440x1440@59.97300,0x0,1
 
 input {
     kb_layout = us,ru
-    kb_variant = 
+    kb_variant =
     kb_model =
     kb_options = grp:win_space_toggle, compose:ralt 
     # Use super + space to switch between english and russian
@@ -54,7 +54,6 @@ monitor=,preferred,auto,auto
 # [Variables]
 $mainMod = SUPER
 $terminal = kitty
-$fileManager = dolphin
 $menu = wofi --show drun
 
 # [Rules]
@@ -65,6 +64,7 @@ windowrulev2 = suppressevent maximize, class:.*
 # [Autostart]
 exec-once = $terminal
 exec-once = hyprpaper
+exec-once = hypridle
 exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ciadpi -i 127.0.0.1 -p 1080 -s1 -q1 -Y -Ar -s5 -o1+s -At -f-1 -r1+s -As -s1 -o1 +s -s-1 -An --debug 1
@@ -73,7 +73,6 @@ exec-once = ciadpi -i 127.0.0.1 -p 1080 -s1 -q1 -Y -Ar -s5 -o1+s -At -f-1 -r1+s 
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 # [Global: Window focus]
