--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,7 +67,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ciadpi -i 127.0.0.1 -p 1080 -s1 -q1 -Y -Ar -s5 -o1+s -At -f-1 -r1+s -As -s1 -o1 +s -s-1 -An --debug 1
+exec-once = ciadpi -s1 -q1 -Y -At -T5 -b1000 -S -f-1 -r1+sm -As --debug 1
 
 # [Global: Start essential programs, close window]
 bind = $mainMod, Q, exec, $terminal
@@ -75,6 +75,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, L, exec, hyprlock
 # [Global: Window focus]
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
