--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,7 +67,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ciadpi -s1 -q1 -Y -Ar -s5 -o1+s -At -f-1 -r1+s -As -s1 -o1 +s -s-1 -An
+exec-once = ciadpi -i 127.0.0.1 -p 10801 -s1 -q1 -f-1 -S -b661 -As
 
 # [Global: Start essential programs, close window]
 bind = $mainMod, Q, exec, $terminal
