--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,6 +62,7 @@ windowrule = center, Rain
 windowrulev2 = suppressevent maximize, class:.*
 
 # [Autostart]
+exec-once = tmux new-session -s xonsh_sess_reserve -d xonsh -DXONSH_PREWARMED=1
 exec-once = $terminal
 exec-once = hyprpaper
 exec-once = hypridle
