--- a/.xonshrc
+++ b/.xonshrc
@@ -28,6 +28,7 @@ $PNPM_HOME = path("~/Env/pnpm")
 $PATH.add("/usr/lib/ccache/bin", front=True)
 $PATH.extend([
     path("~/Bin"),
+    path("~/Bin/Godot"),
     path("~/.ghcup/bin"),
     path("~/.cabal/bin"),
     path("~/.cargo/bin"),
@@ -64,6 +65,7 @@ aliases.update({
     "pixelorama": "~/Bin/Pixelorama/Pixelorama.x86_64",
     "ror": "r2modman --no-sandbox",
     "config": "nvim ~/.xonshrc",
+    "fucking": "sudo",
 })
 
 @alias("c")
