--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,10 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # [Main configuration]
 monitor=HDMI-A-1,3440x1440@59.97300,0x0,1
 
+ecosystem {
+    no_update_news = true
+}
+
 input {
     kb_layout = us,ru
     kb_variant =
