update hyprland config a bit

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,6 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-# [Main configuration]
 monitor=HDMI-A-1,3440x1440@59.97300,0x0,1
 
 ecosystem {
@@ -15,12 +14,9 @@ ecosystem {
 
 input {
     kb_layout = us,ru
-    kb_variant =
-    kb_model =
     kb_options = grp:win_space_toggle, compose:ralt 
     # Use super + space to switch between english and russian
     # Use right alt as the composition key (for XCompose)
-    kb_rules =
 }
 
 cursor {
@@ -73,20 +69,20 @@ exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ciadpi -i 127.0.0.1 -p 10801 -s1 -q1 -f-1 -S -b661 -As
 
-# [Global: Start essential programs, close window]
+# [Start essential programs, close window]
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, L, exec, hyprlock
-# [Global: Window focus]
+# [Window focus]
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 bind = $mainMod, F, fullscreen, 1
-# [Global: Moving Windows]
+# [Moving Windows]
 bind = $mainMod SHIFT, left, movewindow, l
 bind = $mainMod SHIFT, down, movewindow, d
 bind = $mainMod SHIFT, up, movewindow, u
@@ -95,15 +91,8 @@ bind = $mainMod ALT, left, moveactive, -50 0
 bind = $mainMod ALT, down, moveactive, 0 50
 bind = $mainMod ALT, up, moveactive, 0 -50
 bind = $mainMod ALT, right, moveactive, 50 0
-# [Global: Reload Ignis]
-bind = $mainMod, I, exec, ignis reload
-# [Global: Move windows with (alt + left mouse)]
 bindm = ALT,mouse:272,movewindow
-
-# [Submap: Workspaces (W)]
-bind = $mainMod, W, submap, workspaces
-submap = workspaces
-# [Workspaces: Switching between workspaces]
+# [Switching between workspaces]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -114,7 +103,7 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-# [Workspaces: Move a window to a workspace, and switch to that workspaces]
+# [Move window to a workspace, and switch to that workspaces]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -125,7 +114,7 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-# [Workspaces: Move the current window to the specified workspace, dont move the focus to it]
+# [Move current window to the specified workspace, dont move the focus to it]
 bind = ALT SHIFT, 1, movetoworkspacesilent, 1
 bind = ALT SHIFT, 2, movetoworkspacesilent, 2
 bind = ALT SHIFT, 3, movetoworkspacesilent, 3
@@ -136,31 +125,19 @@ bind = ALT SHIFT, 7, movetoworkspacesilent, 7
 bind = ALT SHIFT, 8, movetoworkspacesilent, 8
 bind = ALT SHIFT, 9, movetoworkspacesilent, 9
 bind = ALT SHIFT, 0, movetoworkspacesilent, 10
-# [Workspaces: Reset]
-bind = $mainMod, W, submap, reset
-submap = reset
-
-# [Submap: Tools (T)]
-bind = $mainMod, T, submap, tools
-submap = tools
-# [Tools: Screenshot]
+# [Screenshot]
 bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod, P, exec, grim -g "$(slurp -d)" - | tee ~/Media/Screenshots/$(date +'%Y-%m-%d-%H:%M:%S.png') | wl-copy
-# [Tools: Colorpicker]
+# [Colorpicker]
 bind = $mainMod, C, exec, hyprpicker -a
-# [Tools: Reset]
-bind = $mainMod, T, submap, reset
-submap = reset
 
-# [Submap: Gaming (G)]
-bind = $mainMod, G, submap, gaming
-submap = gaming
-# [Gaming: Window focus]
+# [Restricted submap (gaming)]
+bind = $mainMod, G, submap, restricted
+submap = restricted
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 bind = $mainMod, F, fullscreen, 1
-# [Gaming: Reset]
 bind = $mainMod, G, submap, reset
 submap = reset
