--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-# [NVidia specific stuff]
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
@@ -6,7 +5,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-monitor=HDMI-A-1,3440x1440@59.97300,0x0,1
+monitor = HDMI-A-1, 3440x1440@59.97, 0x0, 1
 
 ecosystem {
     no_update_news = true
@@ -15,8 +14,6 @@ ecosystem {
 input {
     kb_layout = us,ru
     kb_options = grp:win_space_toggle, compose:ralt 
-    # Use super + space to switch between english and russian
-    # Use right alt as the composition key (for XCompose)
 }
 
 cursor {
@@ -45,76 +42,58 @@ misc {
     font_family = "JetBrainsMono Nerd Font"
 }
 
-debug {
-    # overlay = true
-}
-
-monitor=,preferred,auto,auto
-
-# [Variables]
-$mainMod = SUPER
-$terminal = kitty
-$menu = wofi --show drun
-
-# [Rules]
-windowrule = float, ^(kitty)$ # Make terminal a floating window by default
-windowrule = center, Rain
-windowrulev2 = suppressevent maximize, class:.*
-
-# [Autostart]
-exec-once = $terminal
+exec-once = kitty
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = gnome-keyring-daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ciadpi -i 127.0.0.1 -p 10801 -s1 -q1 -f-1 -S -b661 -As
 
-# [Start essential programs, close window]
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, L, exec, hyprlock
-# [Window focus]
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, F, fullscreen, 1
-# [Moving Windows]
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, down, movewindow, d
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod ALT, left, moveactive, -50 0
-bind = $mainMod ALT, down, moveactive, 0 50
-bind = $mainMod ALT, up, moveactive, 0 -50
-bind = $mainMod ALT, right, moveactive, 50 0
-bindm = ALT,mouse:272,movewindow
-# [Switching between workspaces]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-# [Move window to a workspace, and switch to that workspaces]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-# [Move current window to the specified workspace, dont move the focus to it]
+bind = SUPER, Q, exec, kitty
+bind = SUPER, C, killactive,
+bind = SUPER, M, exit,
+bind = SUPER, V, togglefloating,
+bind = SUPER, R, exec, wofi --show drun
+bind = SUPER, L, exec, hyprlock
+
+bind = SUPER, left, movefocus, l
+bind = SUPER, right, movefocus, r
+bind = SUPER, up, movefocus, u
+bind = SUPER, down, movefocus, d
+bind = SUPER, F, fullscreen, 1
+
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, down, movewindow, d
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER ALT, left, moveactive, -50 0
+bind = SUPER ALT, down, moveactive, 0 50
+bind = SUPER ALT, up, moveactive, 0 -50
+bind = SUPER ALT, right, moveactive, 50 0
+bindm = ALT, mouse:272, movewindow
+
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
+
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
+
 bind = ALT SHIFT, 1, movetoworkspacesilent, 1
 bind = ALT SHIFT, 2, movetoworkspacesilent, 2
 bind = ALT SHIFT, 3, movetoworkspacesilent, 3
@@ -125,19 +104,7 @@ bind = ALT SHIFT, 7, movetoworkspacesilent, 7
 bind = ALT SHIFT, 8, movetoworkspacesilent, 8
 bind = ALT SHIFT, 9, movetoworkspacesilent, 9
 bind = ALT SHIFT, 0, movetoworkspacesilent, 10
-# [Screenshot]
-bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = $mainMod, P, exec, grim -g "$(slurp -d)" - | tee ~/Media/Screenshots/$(date +'%Y-%m-%d-%H:%M:%S.png') | wl-copy
-# [Colorpicker]
-bind = $mainMod, C, exec, hyprpicker -a
 
-# [Restricted submap (gaming)]
-bind = $mainMod, G, submap, restricted
-submap = restricted
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod, F, fullscreen, 1
-bind = $mainMod, G, submap, reset
-submap = reset
+bind = SUPER, Print, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = SUPER, P, exec, grim -g "$(slurp -d)" - | tee ~/Media/Screenshots/$(date +'%Y-%m-%d-%H:%M:%S.png') | wl-copy
+bind = ALT, C, exec, hyprpicker -a
