--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -6,10 +6,6 @@ general {
     ignore_empty_input = true
 }
 
-background {
-    monitor =
-}
-
 label {
     monitor =
     text = $TIME
@@ -43,31 +39,30 @@ input-field {
     monitor =
     size = 450, 70
     outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.1 # Scale of dots' absolute size, -1.0 - 1.0
+    dots_size = 0.33
+    dots_spacing = 0.1
     dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    dots_fade_time = 200 # Milliseconds until a dot fully fades in
-    dots_text_format = # Text character used for the input indicator. Leave empty for a rectangle that will be rounded via dots_rounding (default).
+    dots_rounding = -1
+    dots_fade_time = 200
     outer_color = rgb(151515)
     inner_color = rgb(200, 200, 200)
     font_color = rgb(10, 10, 10)
-    font_family = $font # Font used for placeholder_text, fail_text and dots_text_format.
+    font_family = $font
     fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
+    fade_timeout = 1000
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
+    rounding = -1
     check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
+    fail_color = rgb(204, 34, 34)
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    fail_timeout = 2000
+    fail_transition = 300
     capslock_color = -1
     numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
+    bothlock_color = -1
+    invert_numlock = false
+    swap_font_color = false
 
     position = 0, -50
     halign = center
