--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,5 +1,9 @@
 $font = JetBrainsMono Nerd Font
 
+background {
+    monitor =
+}
+
 general {
     disable_loading_bar = true
     hide_cursor = true
