--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ bind = SUPER, Q, exec, kitty
 bind = SUPER, C, killactive,
 bind = SUPER, M, exit,
 bind = SUPER, V, togglefloating,
-bind = SUPER, R, exec, wofi --show drun
+bind = SUPER, R, exec, rofi -show drun
 bind = SUPER, L, exec, hyprlock
 
 bind = SUPER, left, movefocus, l
