make vscode customization command & use hyprland dwindle, smaller borders

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,10 +21,16 @@ cursor {
 }
 
 general {
-    gaps_in = 50
-    gaps_out = 50
-    border_size = 10
+    gaps_in = 20
+    gaps_out = 20
+    border_size = 5
     resize_on_border = true
+    layout = dwindle
+}
+
+dwindle {
+    pseudotile = true
+    smart_split = true
 }
 
 decoration {
