--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ ecosystem {
 
 input {
     kb_layout = us,ru
-    kb_options = grp:win_space_toggle, compose:ralt 
+    kb_options = grp:win_space_toggle, compose:ralt
 }
 
 cursor {
@@ -35,8 +35,8 @@ dwindle {
 
 decoration {
     rounding = 10
-    active_opacity = 1.00
-    inactive_opacity = 0.85
+    active_opacity = 0.85
+    inactive_opacity = 0.65
     blur {
         enabled = true
     }
@@ -114,3 +114,8 @@ bind = ALT SHIFT, 0, movetoworkspacesilent, 10
 bind = SUPER, Print, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = SUPER, P, exec, grim -g "$(slurp -d)" - | tee ~/Media/Screenshots/$(date +'%Y-%m-%d-%H:%M:%S.png') | wl-copy
 bind = ALT, C, exec, hyprpicker -a
+
+bind = SUPER, T, exec, ~/.config/hypr/dropdown-term.sh
+windowrule = float, ^(dropdown)$
+windowrule = size 80% 60%, ^(dropdown)$
+windowrule = center, ^(dropdown)$
